crates/language-v2/tests/src/fail/p2_specifiers/evm_target_wrong_case/test.stderr
error: EVM target 'cancun' must use PascalCase spelling ('Cancun').
 --> src/fail/p2_specifiers/evm_target_wrong_case/test.rs:7:41
  |
7 |     evm_targets = [Frontier, Homestead, cancun],
  |                                         ^^^^^^
